Apply container offset and scroll between transform and containerperspective.

Previously, we mapped a visual rect from a child box to its container like this:

1. Apply layout offset from child to container.
2. Apply transform of child.
3. Apply perspective of container.
4. Apply scroll offset of container.
5. Apply clip of container.

This is incorrect. It should do steps 1 and 4 after step 2 and before step 3.

GeometryMapper already did this correctly. (And VisualRectMappingTest verifies
this).

BUG=699140

Review-Url: https://codereview.chromium.org/2808613002
Cr-Commit-Position: refs/heads/master@{#463436}

Former-commit-id: 2a2f87ba99ef135283c6cf81a173189e78357965